// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInput /> snapshot should match snapshot 1`] = `
<SSRProvider>
  <SearchInput
    aria-label="search"
    clearButtonAriaLabel="Clear"
  >
    <div
      className="md-search-input-wrapper"
      data-focus={false}
      data-height={32}
      onClick={[Function]}
    >
      <div>
        <Icon
          className="md-search-input-search"
          name="search"
          scale={16}
          weight="bold"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={16}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={Object {}}
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-search-input-container"
      >
        <input
          aria-label="search"
          disabled={false}
          id="input-id-mock-input-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
      <InputMessage>
        <div
          className="md-input-message-wrapper"
        >
          <div
            className="md-input-message-message"
            message-level="none"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              />
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </SearchInput>
</SSRProvider>
`;

exports[`<SearchInput /> snapshot should match snapshot when filters are set 1`] = `
<SSRProvider>
  <SearchInput
    aria-label="search"
    clearButtonAriaLabel="Clear"
    filters={
      Array [
        Object {
          "term": "from",
          "translations": Object {
            "empty": "empty",
            "filterAdded": "filteradded",
            "filterRemoved": "filterremoved",
            "nonempty": "nonempty",
            "text": "text",
          },
          "value": "Joe",
        },
        Object {
          "term": "in",
          "translations": Object {
            "empty": "empty",
            "filterAdded": "filteradded",
            "filterRemoved": "filterremoved",
            "nonempty": "nonempty",
            "text": "text",
          },
          "value": "a space",
        },
      ]
    }
    value="From: someone"
  >
    <div
      className="md-search-input-wrapper"
      data-focus={false}
      data-height={32}
      onClick={[Function]}
    >
      <div>
        <Icon
          className="md-search-input-search"
          name="search"
          scale={16}
          weight="bold"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={16}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={Object {}}
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-search-input-container"
      >
        <input
          aria-label="search"
          disabled={false}
          id="input-id-mock-input-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value="From: someone"
        />
      </div>
      <ButtonSimple
        aria-label="Clear"
        className="md-search-input-clear"
        excludeFromTabOrder={false}
        onPress={[Function]}
        onPressStart={[Function]}
        preventFocusOnPress={true}
        useNativeKeyDown={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="Clear"
              className="md-search-input-clear md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <Icon
                name="cancel"
                scale={16}
                weight="bold"
              >
                <div
                  aria-hidden="true"
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-autoscale={false}
                    data-scale={16}
                    data-test="cancel"
                    fill="currentColor"
                    height="100%"
                    style={Object {}}
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
      <InputMessage>
        <div
          className="md-input-message-wrapper"
        >
          <div
            className="md-input-message-message"
            message-level="none"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              />
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </SearchInput>
</SSRProvider>
`;

exports[`<SearchInput /> snapshot should match snapshot when isCombobox is true 1`] = `
<SSRProvider>
  <SearchInput
    clearButtonAriaLabel="Clear"
    isCombobox={true}
    isComboboxExpanded={false}
  >
    <div
      className="md-search-input-wrapper"
      data-focus={false}
      data-height={32}
      onClick={[Function]}
    >
      <div>
        <Icon
          className="md-search-input-search"
          name="search"
          scale={16}
          weight="bold"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={16}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={Object {}}
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-search-input-container"
      >
        <input
          aria-expanded={false}
          disabled={false}
          id="input-id-mock-input-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          role="combobox"
          type="search"
          value=""
        />
      </div>
      <InputMessage>
        <div
          className="md-input-message-wrapper"
        >
          <div
            className="md-input-message-message"
            message-level="none"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              />
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </SearchInput>
</SSRProvider>
`;

exports[`<SearchInput /> snapshot should match snapshot when searching 1`] = `
<SSRProvider>
  <SearchInput
    aria-label="search"
    clearButtonAriaLabel="Clear"
    searching={true}
  >
    <div
      className="md-search-input-wrapper"
      data-focus={false}
      data-height={32}
      onClick={[Function]}
    >
      <div>
        <LoadingSpinner
          className="md-search-input-searching"
          scale={16}
        >
          <div
            className="md-search-input-searching md-loading-spinner-wrapper"
          >
            <Icon
              name="spinner"
              scale={16}
              weight="regular"
            >
              <div
                aria-hidden="true"
                className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-autoscale={false}
                  data-scale={16}
                  data-test="spinner"
                  fill="currentColor"
                  height="100%"
                  style={Object {}}
                  viewBox="0, 0, 32, 32"
                  width="100%"
                />
              </div>
            </Icon>
            <Icon
              className="md-loading-spinner-arch"
              name="spinner-partial"
              scale={16}
              weight="regular"
            >
              <div
                aria-hidden="true"
                className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-loading-spinner-arch md-icon-no-shrink"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-autoscale={false}
                  data-scale={16}
                  data-test="spinner-partial"
                  fill="currentColor"
                  height="100%"
                  style={Object {}}
                  viewBox="0, 0, 32, 32"
                  width="100%"
                />
              </div>
            </Icon>
          </div>
        </LoadingSpinner>
      </div>
      <div
        className="md-search-input-container"
      >
        <input
          aria-label="search"
          disabled={false}
          id="input-id-mock-input-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
      <InputMessage>
        <div
          className="md-input-message-wrapper"
        >
          <div
            className="md-input-message-message"
            message-level="none"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              />
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </SearchInput>
</SSRProvider>
`;

exports[`<SearchInput /> snapshot should match snapshot with a label 1`] = `
<SSRProvider>
  <SearchInput
    aria-label="search"
    clearButtonAriaLabel="Clear"
    label="search"
  >
    <div
      className="md-search-input-wrapper"
      data-focus={false}
      data-height={32}
      onClick={[Function]}
    >
      <label
        htmlFor="input-id-mock-input-id"
        id="test-ID"
      >
        search
      </label>
      <div>
        <Icon
          className="md-search-input-search"
          name="search"
          scale={16}
          weight="bold"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={16}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={Object {}}
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-search-input-container"
      >
        <input
          aria-label="search"
          aria-labelledby="test-ID"
          disabled={false}
          id="input-id-mock-input-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
      <InputMessage>
        <div
          className="md-input-message-wrapper"
        >
          <div
            className="md-input-message-message"
            message-level="none"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              />
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </SearchInput>
</SSRProvider>
`;

exports[`<SearchInput /> snapshot should match snapshot with className 1`] = `
<SSRProvider>
  <SearchInput
    aria-label="search"
    className="example-class"
    clearButtonAriaLabel="Clear"
  >
    <div
      className="example-class md-search-input-wrapper"
      data-focus={false}
      data-height={32}
      onClick={[Function]}
    >
      <div>
        <Icon
          className="md-search-input-search"
          name="search"
          scale={16}
          weight="bold"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={16}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={Object {}}
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-search-input-container"
      >
        <input
          aria-label="search"
          disabled={false}
          id="input-id-mock-input-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
      <InputMessage>
        <div
          className="md-input-message-wrapper"
        >
          <div
            className="md-input-message-message"
            message-level="none"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              />
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </SearchInput>
</SSRProvider>
`;

exports[`<SearchInput /> snapshot should match snapshot with height 1`] = `
<SSRProvider>
  <SearchInput
    aria-label="search"
    clearButtonAriaLabel="Clear"
    height={28}
  >
    <div
      className="md-search-input-wrapper"
      data-focus={false}
      data-height={28}
      onClick={[Function]}
    >
      <div>
        <Icon
          className="md-search-input-search"
          name="search"
          scale={12}
          weight="bold"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={12}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={Object {}}
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-search-input-container"
      >
        <input
          aria-label="search"
          disabled={false}
          id="input-id-mock-input-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
      <InputMessage>
        <div
          className="md-input-message-wrapper"
        >
          <div
            className="md-input-message-message"
            message-level="none"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              />
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </SearchInput>
</SSRProvider>
`;

exports[`<SearchInput /> snapshot should match snapshot with id 1`] = `
<SSRProvider>
  <SearchInput
    aria-label="search"
    clearButtonAriaLabel="Clear"
    id="example-id"
  >
    <div
      className="md-search-input-wrapper"
      data-focus={false}
      data-height={32}
      id="example-id"
      onClick={[Function]}
    >
      <div>
        <Icon
          className="md-search-input-search"
          name="search"
          scale={16}
          weight="bold"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={16}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={Object {}}
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-search-input-container"
      >
        <input
          aria-label="search"
          disabled={false}
          id="input-id-mock-input-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
      <InputMessage>
        <div
          className="md-input-message-wrapper"
        >
          <div
            className="md-input-message-message"
            message-level="none"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              />
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </SearchInput>
</SSRProvider>
`;

exports[`<SearchInput /> snapshot should match snapshot with style 1`] = `
<SSRProvider>
  <SearchInput
    aria-label="search"
    clearButtonAriaLabel="Clear"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <div
      className="md-search-input-wrapper"
      data-focus={false}
      data-height={32}
      onClick={[Function]}
      style={
        Object {
          "color": "pink",
        }
      }
    >
      <div>
        <Icon
          className="md-search-input-search"
          name="search"
          scale={16}
          weight="bold"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={16}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={Object {}}
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-search-input-container"
      >
        <input
          aria-label="search"
          disabled={false}
          id="input-id-mock-input-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
      <InputMessage>
        <div
          className="md-input-message-wrapper"
        >
          <div
            className="md-input-message-message"
            message-level="none"
            role="alert"
          >
            <Text
              className="md-input-message--text"
              type="body-secondary"
            >
              <small
                className="md-text-wrapper md-input-message--text"
                data-type="body-secondary"
              />
            </Text>
          </div>
        </div>
      </InputMessage>
    </div>
  </SearchInput>
</SSRProvider>
`;
